Fix background contrast, bug with z-index

--- a/src/components/LandingPage.css
+++ b/src/components/LandingPage.css
@@ -45,7 +45,7 @@
    display: inline-block;
    width: 30%;
    background-color: #19BAD1;
-   background: linear-gradient(to bottom, rgba(90, 90, 90, 0.1), rgba(90, 90, 90, 0.8) );
+   background: linear-gradient(to bottom, rgba(90, 90, 90, 0.1) , rgba(127, 121, 135, .8));
    margin: 5px;
    padding: 25px;
   }
@@ -53,8 +53,8 @@
   .instructions {
     display: inline-block;
     width: 95%;
-    background-color: #19BAD1;
-    background: linear-gradient(to right bottom, rgba(90, 90, 90, 0.8), rgba(90, 90, 90, 0.8) );
+    background-color:rgba(127, 121, 135, 0.795);
+    /* background: linear-gradient(to right bottom, rgba(90, 90, 90, 0.8), rgba(90, 90, 90, 0.8) ); */
     
     /* background: linear-gradient(to bottom, rgba(90, 90, 90, 0.1), rgba(90, 90, 90, 0.9) ); */
     margin: 5px;
@@ -168,4 +168,20 @@
   .col-12 {
     width: 100%;
   }
+}
+
+
+@media only screen and (max-width:500px) {
+  .f-pg {
+    display: inline-block;
+    width: 30%;
+    background: rgba(127, 121, 135, .8);
+    margin: 5px;
+    padding: 25px;
+   }
+
+   .container h1 {
+    color: black;
+  }
+ 
 }
